Adding editor dependency binaries